fix scrollbar

--- a/src/ui/styles/base.scss
+++ b/src/ui/styles/base.scss
@@ -1,3 +1,5 @@
+@import '~@gravity-ui/uikit/styles/mixins';
+
 html,
 body,
 #root {
@@ -35,6 +37,10 @@ body.g-root {
     --gn-top-alert-height: 0px;
     // Disable overscroll for desktop cause sticky and fixed navigation elements has different behavior
     overscroll-behavior: none;
+
+    scrollbar-width: var(--g-scrollbar-width);
+    scrollbar-color: var(--g-color-scroll-handle) var(--g-color-scroll-track);
+    @include scrollbar;
 }
 
 // Enable overscroll for mobile and iframe
